--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ body, html {
 }
 
 .bgimg {
-  background-image: url('/w3images/forestbridge.jpg');
+  background-image: url('MindandHeart_WebsiteHeader_1280x640.gif');
   height: 100%;
   background-position: center;
   background-size: cover;
