--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@ body, html {
 }
 
 .bgimg {
-  background-image: url('MindandHeart_WebsiteHeader_1280x640.gif');
+  background-image: url('https://technoaddict.000webhostapp.com/MindandHeart_WebsiteHeader_1280x640.gif');
   height: 100%;
   background-position: center;
   background-size: cover;
   position: relative;
   color: white;
   font-family: "Courier New", Courier, monospace;
-  font-size: 25px;
+  font-size: 15px;
 }
 
 .topleft {
@@ -46,12 +46,10 @@ hr {
 
 <div class="bgimg">
   <div class="topleft">
-    <p>Prathamesh Sahasrabhojane</p>
+    <p>Coming soon...</p>
   </div>
   <div class="middle">
-    <h1>COMING SOON</h1>
     <hr>
-    <p>Few days left</p>
   </div>
   <div class="bottomleft">
     <p>@pratham_99</p>
